fixing bug on service title font too large

--- a/css/medias.css
+++ b/css/medias.css
@@ -8,229 +8,75 @@
  */
 
 /* mobile-small */
-/*
-@media all and (min-width: 0) and (max-width: 360px) and (orientation: portrait) {
-    .bkgBanner{
-        background-repeat: no-repeat;
-        background-size: cover;
-        background-position: center center;
-        width: 100%;
-        height: 100%;
-        visibility: inherit;
-        opacity: 1;
-        background-image: url("../images/bg6.jpg");
-    }
+
+/*@media all and (min-width: 0) and (max-width: 360px) and (orientation: portrait) {
 }
 
 !* mobile-large *!
 @media all and (min-width: 361px) and (orientation: portrait) {
-    .bkgBanner{
-        background-repeat: no-repeat;
-        background-size: cover;
-        background-position: center center;
-        width: 100%;
-        height: 100%;
-        visibility: inherit;
-        opacity: 1;
-        background-image: url("../images/bg6.jpg");
-    }
 }
 
 !* mobile-small-landscape *!
 @media all and (min-width: 0) and (max-width: 480px) and (orientation: landscape) {
-    .bkgBanner{
-        background-repeat: no-repeat;
-        background-size: cover;
-        background-position: center center;
-        width: 100%;
-        height: 100%;
-        visibility: inherit;
-        opacity: 1;
-        background-image: url("../images/bg6.jpg");
-    }
 }
 
 !* mobile-large-landscape *!
 @media all and (min-width: 481px) and (orientation: landscape) {
-    .bkgBanner{
-        background-repeat: no-repeat;
-        background-size: cover;
-        background-position: center center;
-        width: 100%;
-        height: 100%;
-        visibility: inherit;
-        opacity: 1;
-        background-image: url("../images/bg6.jpg");
-    }
 }
 
 !* tablet-small-landscape *!
 @media all and (min-width: 600px) and (max-width: 960px) and (orientation: landscape) {
-    .bkgBanner{
-        background-repeat: no-repeat;
-        background-size: cover;
-        background-position: center center;
-        width: 100%;
-        height: 100%;
-        visibility: inherit;
-        opacity: 1;
-        background-image: url("../images/bg6.jpg");
-    }
 }
 
 !* tablet-large-landscape *!
 @media all and (min-width: 961px) and (orientation: landscape) {
-    .bkgBanner{
-        background-repeat: no-repeat;
-        background-size: cover;
-        background-position: center center;
-        width: 100%;
-        height: 100%;
-        visibility: inherit;
-        opacity: 1;
-        background-image: url("../images/bg6.jpg");
-    }
 }
 
 !* tablet-small *!
 @media all and (min-width: 600px) and (orientation: portrait) {
-    .bkgBanner{
-        background-repeat: no-repeat;
-        background-size: cover;
-        background-position: center center;
-        width: 100%;
-        height: 100%;
-        visibility: inherit;
-        opacity: 1;
-        background-image: url("../images/bg6.jpg");
-    }
-}
+}*/
 
-!* tablet-large *!
+/* tablet-large */
 @media all and (min-width: 601px) and (max-width: 840px) and (orientation : portrait) {
-    .bkgBanner{
-        background-repeat: no-repeat;
-        background-size: cover;
-        background-position: center center;
-        width: 100%;
-        height: 100%;
-        visibility: inherit;
-        opacity: 1;
-        background-image: url("../images/bg6.jpg");
+    div.media-body h4 {
+        font-size: 15px;
     }
 }
 
-!* desktop-x-small-landscape *!
-@media all and (min-width: 0) and (max-width: 480px) and (orientation: landscape) {
-    .bkgBanner{
-        background-repeat: no-repeat;
-        background-size: cover;
-        background-position: center center;
-        width: 100%;
-        height: 100%;
-        visibility: inherit;
-        opacity: 1;
-        background-image: url("../images/bg6.jpg");
-    }
+/* desktop-x-small-landscape */
+/*@media all and (min-width: 0) and (max-width: 480px) and (orientation: landscape) {
+
 }
 
 !* desktop-x-small *!
 @media all and (min-width: 0) and (max-width: 480px) and (max-aspect-ratio: 4/3) {
-    .bkgBanner{
-        background-repeat: no-repeat;
-        background-size: cover;
-        background-position: center center;
-        width: 100%;
-        height: 100%;
-        visibility: inherit;
-        opacity: 1;
-        background-image: url("../images/bg6.jpg");
-    }
+
 }
 
 !* desktop-small-landscape *!
 @media all and (min-width: 481px) and (max-width: 840px) and (orientation: landscape) {
-    .bkgBanner{
-        background-repeat: no-repeat;
-        background-size: cover;
-        background-position: center center;
-        width: 100%;
-        height: 100%;
-        visibility: inherit;
-        opacity: 1;
-        background-image: url("../images/bg6.jpg");
-    }
 }
 
 !* desktop-small *!
 @media all and (min-width: 481px) and (max-width: 840px) and (max-aspect-ratio: 4/3) {
-    .bkgBanner{
-        background-repeat: no-repeat;
-        background-size: cover;
-        background-position: center center;
-        width: 100%;
-        height: 100%;
-        visibility: inherit;
-        opacity: 1;
-        background-image: url("../images/bg6.jpg");
-    }
 }
 
 !* desktop-medium-landscape *!
 @media all and (min-width: 841px) and (max-width: 1280px) and (orientation: landscape) {
-    .bkgBanner{
-        background-repeat: no-repeat;
-        background-size: cover;
-        background-position: center center;
-        width: 100%;
-        height: 100%;
-        visibility: inherit;
-        opacity: 1;
-        background-image: url("../images/bg6.jpg");
-    }
 }
 
 !* desktop-medium *!
 @media all and (min-width: 841px) and (max-width: 1280px) and (max-aspect-ratio: 4/3) {
-    .bkgBanner{
-        background-repeat: no-repeat;
-        background-size: cover;
-        background-position: center center;
-        width: 100%;
-        height: 100%;
-        visibility: inherit;
-        opacity: 1;
-        background-image: url("../images/bg6.jpg");
-    }
 }
 
 !* desktop-large *!
 @media all and (min-width: 1281px) and (max-width: 1600px) {
-    .bkgBanner{
-        background-repeat: no-repeat;
-        background-size: cover;
-        background-position: center center;
-        width: 100%;
-        height: 100%;
-        visibility: inherit;
-        opacity: 1;
-        background-image: url("../images/bg6.jpg");
-    }
 }
 
 !* desktop-xlarge *!
 @media all and (min-width: 1601px) and (max-width: 1920px) {
-    .bkgBanner{
-        background-repeat: no-repeat;
-        background-size: cover;
-        background-position: center center;
-        width: 100%;
-        height: 100%;
-        visibility: inherit;
-        opacity: 1;
-        background-image: url("../images/bg6.jpg");
-    }
 }*/
+
 .bkgBanner{
     background-repeat: no-repeat;
     background-size: cover;
